--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -1,5 +1,7 @@
 .sign-in-and-sign-up {
-  // width: 100vw;
+  width: 850px;
+  justify-content: space-between;
   display: flex;
   flex-direction: row;
+  margin: 30px auto;
 }
